codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__local_control_tests__native_standard_plan_composer.snap
---
source: tui/src/app/tests/local_control_tests.rs
assertion_line: 138
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
› Ask Codex to do anything

  gpt-5.4 high · /tmp/project                   Plan mode (shift+tab to cycle)
